website/public/app-ui/css/app.scss
@import "dropzone";
@import "sidebarNavigation";

@import "header";
@import "footer";
@import "panel";
@import "flags";
@import "image-placeholder";
@import "geokret-avatar-pictures";
@import "geokret-avatar-upload";
@import "geokret-details";
@import "geokret-move";
@import "geokret-move-tracking-code";
@import "icons";
@import "gallery";
@import "map-home";
@import "submenu";
@import "statpic";
@import "credits";
@import "maps";
@import "user-details";
@import "user-authentication-history";
@import "news";
@import "header-link";

/* Move down content because we have a fixed navbar that is 50px tall */
.container {
  // padding-top: 50px;
  padding-bottom: 20px;
}

// Space between row on mobile
@media (max-width: 991px) {
  .top-buffer {
    margin-top: 20px;
  }
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

.navbar-admin {
  color: orangered !important;
}

.leaflet-container {
  height: 400px;
}

.leaflet-container-200 {
  height: 230px;
}

.leaflet-container-small {
  background-color: #eee;
  border: 1px solid silver;
  height: 163px;
}

#preview-image-plugin-overlay {
  z-index: 9999;
}

a.anchor {
  display: block;
  position: relative;
  top: -65px;
  visibility: hidden;
}

figcaption.caption-button {
  p {
    margin: 10px 5px 5px;
  }
}

.user-anonymous {
  color: #888;
}

.ellipsis {
  text-overflow: ellipsis;
}

input.input-uc {
    text-transform: uppercase;
}

.margin-20 {
  margin: 20px;
}

.margin-bottom-20 {
  margin-bottom: 20px;
}

.coordinates-togglable, .map-togglable {
  display: none;
}

.navbar-inverse .navbar-nav > li > a.red {
  color: orangered;
}

.bold {
  font-weight: bold !important;
}

.red {
  color: orangered;
}

.btn-black,
.btn-black:hover,
.btn-black:active,
.btn-black:visited {
  background-color: #0d1117 !important;
  border-color: #9d9d9d;
  color: #e6edf3;
}

// Hr line with centered text
// https://stackoverflow.com/a/26634224/944936
.separator {
  display: flex;
  align-items: center;
  text-align: center;
}

.separator::before,
.separator::after {
  content: '';
  flex: 1;
  border-bottom: 1px solid #ddd; //@gray-lighter
}

.separator:not(:empty)::before {
  margin-right: .25em;
}

.separator:not(:empty)::after {
  margin-left: .25em;
}

.row.same-height {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  flex-wrap: wrap;
}
.row.same-height > [class*='col-'] {
  display: flex;
  flex-direction: column;

  .thumbnail {
    height: 100%;
  }
}

